src/test/resources/org/nest/nestml/_cocos/invalid/neuronWithMultipleOrNoInput.nestml
neuron neuronWithNoInput:

end

neuron neuronWithMultipleInputs:
  input:
    spikes1 <- spike

  end

  input:
    spikes2 <- spike
  end

end

neuron neuronWithEmptyInputBlock:
  input:
  end

end